<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageview"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_centerVertical="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        tools:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintStart_toEndOf="@+id/imageview"
        app:layout_constraintTop_toTopOf="@+id/imageview">


        <TextView
            android:id="@+id/name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/location_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal"
            tools:text="@string/location" />

        <TextView
            android:id="@+id/bio_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal"
            tools:text="@string/bio" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>